base/kibana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
    app.kubernetes.io/name: kibana
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: efk
    app.kubernetes.io/version: 7.14.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
        app.kubernetes.io/name: kibana
        app.kubernetes.io/component: ui
        app.kubernetes.io/part-of: efk
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.14.0
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        ports:
        - containerPort: 5601
          name: http
        volumeMounts:
          - name: es-ca
            mountPath: /usr/share/kibana/config/certs
            readOnly: true
        startupProbe:
          httpGet:
            path: /api/status
            port: 5601
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status
            port: 5601
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 6
        livenessProbe:
          httpGet:
            path: /api/status
            port: 5601
          initialDelaySeconds: 90
          periodSeconds: 30
      volumes:
        - name: es-ca
          secret:
            secretName: es-ca
            defaultMode: 0440
