base/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    app: kibana
    app.kubernetes.io/name: kibana
    app.kubernetes.io/component: ui
    app.kubernetes.io/part-of: efk
spec:
  selector:
    app: kibana
  type: ClusterIP
  ports:
    - port: 5601
      targetPort: 5601
      name: http
